# text-indexierung

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  compile.sh  concat.sh  concat_ou.sh  fixed.cpp  generate_query_file.cpp  generate_query_file.sh  generate_words.py  hashmap.cpp  main.cc  main.cpp  run.sh  stats.cpp  stats.csv  stats.sh  trie.h  unit_tests.cpp  util.h  variable.cpp  visualize.py  visualize.sh
resources/output/: bible.txt  enron.txt  enwik8_words.txt  enwik9_words.txt  summary.csv  words.txt
resources/output_old/: enron.txt  words.txt
resources/queries/: words.txt
src/: tests.cpp  trie.h  util.h
